<resources>
    <string name="app_name">YUMMIFai</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="select_picture">select a picture</string>
    <string name="choose_ingredient">Choose your ingredients (Generated by Clarifai API Tags endpoint)</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="event_name">Event Name</string>
    <string name="location">Add location</string>
    <string name="add_event">Add this recipe to calendar</string>
    <string name="invite_people">Invite people</string>
    <string name="all_day">All-day</string>
</resources>
