<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.integration.clarifai.yummifai.MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_picture"
        android:id="@+id/textView"
        android:fontFamily="sans-serif"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cameraButton"
        android:background="@drawable/ic_camera_enhance_black_48dp"
        android:clickable="true"
        android:layout_alignTop="@+id/galleryButton"
        android:layout_alignStart="@+id/recipeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_recipe"
        android:id="@+id/recipeButton"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/galleryButton"
        android:clickable="true"
        android:background="@drawable/ic_photo_size_select_actual_black_48dp"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/recipeButton" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_listView"
        android:layout_above="@+id/recipeButton"
        android:layout_below="@+id/chooseItemsText"
        android:choiceMode="multipleChoice" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/cameraButton"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_ingredient"
        android:id="@+id/chooseItemsText"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/cameraButton"
        android:layout_alignEnd="@+id/item_listView"
        android:visibility="invisible"
        android:textColor="#000000" />
</RelativeLayout>
